[gd_scene format=3 uid="uid://bfqrgwsmvmows"]

[ext_resource type="Script" uid="uid://dnylpeweql34" path="res://nodes/score_counter/score_counter.gd" id="1_hwhq2"]

[node name="ScoreCounter" type="Node" unique_id=350995405]
script = ExtResource("1_hwhq2")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1427802161]

[node name="Control" type="Control" parent="CanvasLayer" unique_id=672989471]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Counter" type="Label" parent="CanvasLayer/Control" unique_id=1115583404]
layout_mode = 1
offset_top = 32.0
offset_right = 181.0
offset_bottom = 55.0
text = "Time survived: 00m 00s"

[node name="HighScore" type="Label" parent="CanvasLayer/Control" unique_id=899052595]
layout_mode = 0
offset_top = 55.0
offset_right = 181.0
offset_bottom = 78.0
text = "Highscore: 00m 00s"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/Control" unique_id=901002917]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 27.0
grow_horizontal = 2

[node name="ProgressInfo" type="Label" parent="CanvasLayer/Control" unique_id=57698906]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = 27.0
offset_right = 24.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Time left:
00m 00s"

[node name="Timer" type="Timer" parent="." unique_id=814476877]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
